Change AvatarBean to immutable