@@ -1,6 +1,5 @@
 package com.faforever.client.avatar;
 
-import com.faforever.client.builders.AvatarBeanBuilder;
 import com.faforever.client.builders.PlayerBeanBuilder;
 import com.faforever.client.domain.AvatarBean;
 import com.faforever.client.mapstruct.AvatarMapper;
@@ -9,6 +8,7 @@ import com.faforever.client.player.PlayerService;
 import com.faforever.client.remote.AssetService;
 import com.faforever.client.remote.FafServerAccessor;
 import com.faforever.client.test.ServiceTest;
+import org.instancio.Instancio;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,11 +18,13 @@ import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
+import static org.instancio.Select.field;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
@@ -50,9 +52,14 @@ public class AvatarServiceTest extends ServiceTest {
 
   @Test
   public void testLoadAvatar() throws Exception {
-    AvatarBean avatarBean = AvatarBeanBuilder.create().url(getClass().getResource("/theme/images/default_achievement.png").toURI().toURL()).get();
+    AvatarBean avatarBean = Instancio.of(AvatarBean.class)
+                                     .set(field(AvatarBean::url),
+                                          getClass().getResource("/theme/images/default_achievement.png")
+                                                    .toURI()
+                                                    .toURL())
+                                     .create();
     instance.loadAvatar(avatarBean);
-    verify(assetService).loadAndCacheImage(avatarBean.getUrl(), Path.of("avatars"));
+    verify(assetService).loadAndCacheImage(avatarBean.url(), Path.of("avatars"));
   }
 
   @Test
@@ -72,8 +79,8 @@ public class AvatarServiceTest extends ServiceTest {
   public void changeAvatar() throws Exception {
     when(playerService.getCurrentPlayer()).thenReturn(PlayerBeanBuilder.create().get());
 
-    URL url = new URL("https://example.com");
-    instance.changeAvatar(AvatarBeanBuilder.create().url(url).description("Description").get());
+    URL url = URI.create("https://example.com").toURL();
+    instance.changeAvatar(Instancio.of(AvatarBean.class).set(field(AvatarBean::url), url).create());
 
     verify(fafServerAccessor).selectAvatar(url);
   }
